Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1734144071380.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/StreamCryptoDFS/build
[ 20%] Building CXX object CMakeFiles/dfs_crypto.dir/src/crypto/crypto_stream.cpp.o
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp: In constructor ‘dfs::crypto::CryptoStream::CryptoStream()’:
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:14:26: error: no match for ‘operator<<’ (operand types are ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ and ‘boost::log::v2_mt_posix::trivial::severity_level’)
   14 |     Logger::get_logger() << boost::log::trivial::info << "CryptoStream instance created";
      |     ~~~~~~~~~~~~~~~~~~~~ ^~ ~~~~~~~~~~~~~~~~~~~~~~~~~
      |                       |                          |
      |                       |                          boost::log::v2_mt_posix::trivial::severity_level
      |                       boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>
In file included from /home/runner/StreamCryptoDFS/include/logger/logger.hpp:5,
                 from /home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:2:
include/boost/log/trivial.hpp:68:46: note: candidate: ‘template<class CharT, class TraitsT> std::basic_ostream<_CharT, _Traits>& boost::log::v2_mt_posix::trivial::operator<<(std::basic_ostream<_CharT, _Traits>&, severity_level)’
include/boost/log/trivial.hpp:68:46: note:   template argument deduction/substitution failed:
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:14:50: note:   ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ is not derived from ‘std::basic_ostream<_CharT, _Traits>’
   14 |     Logger::get_logger() << boost::log::trivial::info << "CryptoStream instance created";
      |                                                  ^~~~
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp: In member function ‘void dfs::crypto::CryptoStream::initialize(const std::vector<unsigned char>&, const std::vector<unsigned char>&)’:
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:22:26: error: no match for ‘operator<<’ (operand types are ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ and ‘boost::log::v2_mt_posix::trivial::severity_level’)
   22 |     Logger::get_logger() << boost::log::trivial::debug
      |     ~~~~~~~~~~~~~~~~~~~~ ^~ ~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                       |                          |
      |                       |                          boost::log::v2_mt_posix::trivial::severity_level
      |                       boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>
include/boost/log/trivial.hpp:68:46: note: candidate: ‘template<class CharT, class TraitsT> std::basic_ostream<_CharT, _Traits>& boost::log::v2_mt_posix::trivial::operator<<(std::basic_ostream<_CharT, _Traits>&, severity_level)’
include/boost/log/trivial.hpp:68:46: note:   template argument deduction/substitution failed:
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:22:50: note:   ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ is not derived from ‘std::basic_ostream<_CharT, _Traits>’
   22 |     Logger::get_logger() << boost::log::trivial::debug
      |                                                  ^~~~~
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:27:30: error: no match for ‘operator<<’ (operand types are ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ and ‘boost::log::v2_mt_posix::trivial::severity_level’)
   27 |         Logger::get_logger() << boost::log::trivial::error
      |         ~~~~~~~~~~~~~~~~~~~~ ^~ ~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                           |                          |
      |                           |                          boost::log::v2_mt_posix::trivial::severity_level
      |                           boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>
include/boost/log/trivial.hpp:68:46: note: candidate: ‘template<class CharT, class TraitsT> std::basic_ostream<_CharT, _Traits>& boost::log::v2_mt_posix::trivial::operator<<(std::basic_ostream<_CharT, _Traits>&, severity_level)’
include/boost/log/trivial.hpp:68:46: note:   template argument deduction/substitution failed:
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:27:54: note:   ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ is not derived from ‘std::basic_ostream<_CharT, _Traits>’
   27 |         Logger::get_logger() << boost::log::trivial::error
      |                                                      ^~~~~
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:33:30: error: no match for ‘operator<<’ (operand types are ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ and ‘boost::log::v2_mt_posix::trivial::severity_level’)
   33 |         Logger::get_logger() << boost::log::trivial::error
      |         ~~~~~~~~~~~~~~~~~~~~ ^~ ~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                           |                          |
      |                           |                          boost::log::v2_mt_posix::trivial::severity_level
      |                           boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>
include/boost/log/trivial.hpp:68:46: note: candidate: ‘template<class CharT, class TraitsT> std::basic_ostream<_CharT, _Traits>& boost::log::v2_mt_posix::trivial::operator<<(std::basic_ostream<_CharT, _Traits>&, severity_level)’
include/boost/log/trivial.hpp:68:46: note:   template argument deduction/substitution failed:
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:33:54: note:   ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ is not derived from ‘std::basic_ostream<_CharT, _Traits>’
   33 |         Logger::get_logger() << boost::log::trivial::error
      |                                                      ^~~~~
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:41:26: error: no match for ‘operator<<’ (operand types are ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ and ‘boost::log::v2_mt_posix::trivial::severity_level’)
   41 |     Logger::get_logger() << boost::log::trivial::info << "CryptoStream initialized successfully";
      |     ~~~~~~~~~~~~~~~~~~~~ ^~ ~~~~~~~~~~~~~~~~~~~~~~~~~
      |                       |                          |
      |                       |                          boost::log::v2_mt_posix::trivial::severity_level
      |                       boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>
include/boost/log/trivial.hpp:68:46: note: candidate: ‘template<class CharT, class TraitsT> std::basic_ostream<_CharT, _Traits>& boost::log::v2_mt_posix::trivial::operator<<(std::basic_ostream<_CharT, _Traits>&, severity_level)’
include/boost/log/trivial.hpp:68:46: note:   template argument deduction/substitution failed:
/home/runner/StreamCryptoDFS/src/crypto/crypto_stream.cpp:41:50: note:   ‘boost::log::v2_mt_posix::sources::severity_logger<boost::log::v2_mt_posix::trivial::severity_level>’ is not derived from ‘std::basic_ostream<_CharT, _Traits>’
   41 |     Logger::get_logger() << boost::log::trivial::info << "CryptoStream initialized successfully";
      |                                                  ^~~~
make[2]: *** [CMakeFiles/dfs_crypto.dir/build.make:76: CMakeFiles/dfs_crypto.dir/src/crypto/crypto_stream.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:85: CMakeFiles/dfs_crypto.dir/all] Error 2
make: *** [Makefile:146: all] Error 2